--- a/src/components/ui/nav-links-list.astro
+++ b/src/components/ui/nav-links-list.astro
@@ -1,10 +1,7 @@
 ---
-import NavLink from "./nav-link.astro";
+import type { Props as Link } from "./nav-link.astro";
 
-type Link = {
-  href: string;
-  text: string;
-};
+import NavLink from "./nav-link.astro";
 
 type Props = {
   links: Link[];
