add index files, update imports for consistency and clarity across components

--- a/src/components/ui/menu-button.astro
+++ b/src/components/ui/menu-button.astro
@@ -1,8 +1,8 @@
 ---
 import { Image } from "astro:assets";
 
-import close from "../../assets/close.svg";
-import hamburgerMenu from "../../assets/hamburger-menu.svg";
+import close from "@/assets/close.svg";
+import hamburgerMenu from "@/assets/hamburger-menu.svg";
 
 const MENU_BUTTON_SIZE = 50;
 ---
