--- a/src/components/ui/nav-link.astro
+++ b/src/components/ui/nav-link.astro
@@ -1,7 +1,7 @@
 ---
 import type { HTMLAttributes } from "astro/types";
 
-export type Props = HTMLAttributes<"a"> & {
+type Props = HTMLAttributes<"a"> & {
   href: string;
   text: string;
 };
