--- a/src/components/react/contact-form/contact-form.css
+++ b/src/components/react/contact-form/contact-form.css
@@ -1,12 +1,19 @@
-.form-footer {
-  margin-block-start: 20px;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
+.contact-form {
+  grid-area: form;
+  position: relative;
 }
 
-.button-container {
+.form-footer {
+  margin-block-start: calc(var(--default-spacing) / 2);
   display: flex;
-  justify-content: end;
-  position: relative;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+}
+
+@media only screen and (max-width: 56.25em) {
+  .form-footer {
+    flex-direction: column;
+    text-align: center;
+    row-gap: 10px;
+  }
 }
