update import statement for Link type

--- a/src/components/ui/nav-links-list.astro
+++ b/src/components/ui/nav-links-list.astro
@@ -1,5 +1,5 @@
 ---
-import type { Props as Link } from "./nav-link.astro";
+import type { Link } from "@/types";
 
 import NavLink from "./nav-link.astro";
 
