--- a/src/components/ui/navigation.astro
+++ b/src/components/ui/navigation.astro
@@ -46,8 +46,6 @@ const { links } = Astro.props;
 
   .mobile-menu[popover] {
     border: none;
-    padding: 0;
-    margin: 0;
     width: 100%;
     background: var(--color-grey-light);
     overflow-y: auto;
@@ -172,10 +170,10 @@ const { links } = Astro.props;
     });
 
     // Clean up
-    window.addEventListener("pagehide", () => {
+    document.addEventListener("astro:beforeunload", () => {
       toggleScrollLock(false);
     });
   }
 
-  document.addEventListener("DOMContentLoaded", initScrollLock);
+  document.addEventListener("astro:page-load", initScrollLock);
 </script>
