--- a/src/components/product/product-info.astro
+++ b/src/components/product/product-info.astro
@@ -14,7 +14,6 @@ type Props = {
 const { product } = Astro.props;
 
 const {
-  slug,
   title,
   priceWithoutVat,
   description,
@@ -25,7 +24,7 @@ const {
 ---
 
 <>
-  <h2 class="product__title" transition:name={`title-${slug}`}>{title}</h2>
+  <h2 class="product__title">{title}</h2>
   <div class="product__info">
     <Price price={Number(priceWithoutVat)} />
     <div id="stock-status"></div>
