--- a/src/components/react/loading-spinner/loading-spinner.css
+++ b/src/components/react/loading-spinner/loading-spinner.css
@@ -2,6 +2,25 @@
   stroke: var(--color-grey-light);
   stroke-width: 5px;
   animation: rotate 2s linear infinite;
+  display: block;
+}
+
+.spinner--small {
+  width: 24px;
+  height: 24px;
+  stroke-width: 3px;
+}
+
+.spinner--medium {
+  width: 40px;
+  height: 40px;
+  stroke-width: 4px;
+}
+
+.spinner--large {
+  width: 64px;
+  height: 64px;
+  stroke-width: 5px;
 }
 
 .spinner_circle {
